--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,20 +1,104 @@
 <app-navigation></app-navigation>
-<mat-card class="example-card">
-  <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>Test Post</mat-card-title>
-    <mat-card-subtitle>User Abc</mat-card-subtitle>
-  </mat-card-header>
+<!--<mat-grid-list cols="4" rowHeight="100px">-->
+<!--  <mat-grid-tile-->
+<!--    *ngFor="let tile of tiles"-->
+<!--    [colspan]="tile.cols"-->
+<!--    [rowspan]="tile.rows"-->
+<!--    [style.background]="tile.color">-->
+<!--    {{tile.text}}-->
 
-  <mat-card-content>
-    <p>
-      The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-      A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-      bred for hunting.
-    </p>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
-  </mat-card-actions>
-</mat-card>
+<!--  </mat-grid-tile>-->
+<!--</mat-grid-list>-->
+
+<mat-grid-list cols="2" rowHeight="2:1">
+  <mat-grid-tile *ngFor="let post of allPostArr">
+    <mat-card class="example-card">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title>Post Id {{post.id}}</mat-card-title>
+        <mat-card-subtitle>Posted By : {{post.posted_by}}</mat-card-subtitle>
+      </mat-card-header>
+
+      <mat-card-content>
+        <p>
+          Post Description: {{post.post_description}}
+        </p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
+        <button mat-button>View</button>
+        <button mat-button>Add Comment</button>
+      </mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
+
+<!--  <mat-grid-tile>-->
+<!--    <mat-card class="example-card">-->
+<!--      <mat-card-header>-->
+<!--        <div mat-card-avatar class="example-header-image"></div>-->
+<!--        <mat-card-title>Test Post</mat-card-title>-->
+<!--        <mat-card-subtitle>User Abc</mat-card-subtitle>-->
+<!--      </mat-card-header>-->
+
+<!--      <mat-card-content>-->
+<!--        <p>-->
+<!--          The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.-->
+<!--          A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally-->
+<!--          bred for hunting.-->
+<!--        </p>-->
+<!--      </mat-card-content>-->
+<!--      <mat-card-actions>-->
+<!--        <button mat-button>LIKE</button>-->
+<!--        <button mat-button>SHARE</button>-->
+<!--      </mat-card-actions>-->
+<!--    </mat-card>-->
+<!--  </mat-grid-tile>-->
+
+<!--  <mat-grid-tile>-->
+<!--    <mat-card class="example-card">-->
+<!--      <mat-card-header>-->
+<!--        <div mat-card-avatar class="example-header-image"></div>-->
+<!--        <mat-card-title>Test Post</mat-card-title>-->
+<!--        <mat-card-subtitle>User Abc</mat-card-subtitle>-->
+<!--      </mat-card-header>-->
+
+<!--      <mat-card-content>-->
+<!--        <p>-->
+<!--          The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.-->
+<!--          A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally-->
+<!--          bred for hunting.-->
+<!--        </p>-->
+<!--      </mat-card-content>-->
+<!--      <mat-card-actions>-->
+<!--        <button mat-button>LIKE</button>-->
+<!--        <button mat-button>SHARE</button>-->
+<!--      </mat-card-actions>-->
+<!--    </mat-card>-->
+<!--  </mat-grid-tile>-->
+
+<!--  <mat-grid-tile>-->
+<!--    <mat-card class="example-card">-->
+<!--      <mat-card-header>-->
+<!--        <div mat-card-avatar class="example-header-image"></div>-->
+<!--        <mat-card-title>Test Post</mat-card-title>-->
+<!--        <mat-card-subtitle>User Abc</mat-card-subtitle>-->
+<!--      </mat-card-header>-->
+
+<!--      <mat-card-content>-->
+<!--        <p>-->
+<!--          The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.-->
+<!--          A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally-->
+<!--          bred for hunting.-->
+<!--        </p>-->
+<!--      </mat-card-content>-->
+<!--      <mat-card-actions>-->
+<!--        <button mat-button>LIKE</button>-->
+<!--        <button mat-button>SHARE</button>-->
+<!--      </mat-card-actions>-->
+<!--    </mat-card>-->
+<!--  </mat-grid-tile>-->
+
+</mat-grid-list>
+
+
