signup,delete implemented

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -8,7 +8,7 @@
 
     <button mat-button>Add Post</button>
     <button mat-button>My Post</button>
-    <button mat-button [matMenuTriggerFor]="approveMenu">Approve Posts</button>
+    <button mat-button [matMenuTriggerFor]="approveMenu">Approve Post</button>
     <mat-menu #approveMenu="matMenu" yPosition="above">
       <button mat-menu-item>Approve</button>
       <button mat-menu-item>Reject</button>
